# HomeGuard-Monitor

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  Makefile  QUICK_START.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  monitoring_agent.py
agents/tests/: __init__.py  test_monitoring_agent.py
backend/: .env.example  BUG_REPORT.md  Dockerfile  FINAL_BUG_REPORT.md  README_TESTING.md  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ec1952aa7a19_initial.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  devices.py  metrics.py
backend/app/core/: auth.py  config.py  database.py  errors.py  exceptions.py  logging.py  rate_limiting.py  ws.py
backend/app/models/: alert.py  device.py  metric.py  user.py
backend/app/schemas/: alert.py  device.py  metric.py  user.py
backend/app/services/: alert_service.py  auth_service.py  device_service.py  metric_service.py  notification_service.py
backend/app/tasks/: alerting.py  data_processing.py
backend/scripts/: run_tests.sh
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_celery_tasks.py  test_config.py  test_devices.py  test_e2e.py  test_integration.py  test_metrics.py  test_models.py  test_notifications.py  test_security.py  test_services.py  test_simple.py  test_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: alerts.ts  auth.ts  client.ts  devices.ts  index.ts  metrics.ts
frontend/src/components/: AlertNotification.tsx  Dashboard.tsx  Login.tsx
frontend/src/hooks/: useWebSocket.ts
scripts/: init-timescaledb.sql
