[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeguard-monitor"
version = "1.0.0"
description = "A comprehensive monitoring and alerting system for personal servers and IoT devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HomeGuard Team" }]
keywords = ["monitoring", "alerting", "iot", "servers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "pydantic[email]>=2.6.1",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.2",
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "structlog>=24.1.0",
    "twilio>=8.10.3",
    "aiosmtplib>=3.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.4",
    "mypy>=1.8.0",
    "isort>=5.13.2",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "httpx-mock>=0.3.1",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/HomeGuard-Monitor"
Documentation = "https://github.com/yourusername/HomeGuard-Monitor/wiki"
Repository = "https://github.com/yourusername/HomeGuard-Monitor.git"
Issues = "https://github.com/yourusername/HomeGuard-Monitor/issues"

# Tool configurations

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "celery.*",
    "psutil.*",
    "sklearn.*",
    "twilio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --disable-warnings"
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
