[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeguard-backend"
version = "1.0.0"
description = "HomeGuard Monitor Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "pydantic[email]>=2.6.1",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.2",
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "structlog>=24.1.0",
    "twilio>=8.10.3",
    "aiosmtplib>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.4",
    "mypy>=1.8.0",
    "isort>=5.13.2",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.29.0",
    "aiosqlite>=0.19.0",
    "faker>=20.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
